--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ body {
 
 
 .fireBall {
-   
     background-size: contain;
     background-image: url('../img/fireball.gif');
     transform: rotateY(180deg);
@@ -93,26 +92,40 @@ body {
 }
 
 #gameOverImg {
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 700px;
+    width: 600px;
     height: 400px;
-    background-color: rgba(129, 123, 123, 0.56);
-    background-image: url('../img/game_over.png');
+    background-color: rgba(199, 182, 182, 0.57);
+    /*background-image: url('../img/game_over.png');*/
     z-index: 99999;
+    border-radius: 70px;
+}
+
+#gameOverImg > img {
+    position: relative;
+    background-size: cover;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 #restart {
-    /*font-size: 1.5rem;*/
-    height: fit-content;
-    font-weight: bold;
+    z-index: 999999;
+}
+
+#instructionsModal {
+    /*visibility: hidden;*/
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
 }
 
 .modal {
-    /*visibility: hidden;*/
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
     z-index: 1;
     width: 60%;
     height:fit-content;
