--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 #background {
-    width: 90vw ;
-    height: 90vh;
+    width: 100vw ;
+    height: 100vh;
     background-image: url('../img/background-final-2.jpg');
     background-size: cover;
     position: relative;
@@ -155,3 +155,52 @@ body {
     display: inline-block;
 }
 
+/* Media query*/
+
+#not-support {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+#not-support h1 {
+    width: 100%;
+    text-align: center;
+}
+
+#not-full-screen{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    top: 0;
+    background-color: rgba(136, 136, 136, 0.58);
+    visibility: hidden;
+}
+
+#not-full-screen > h3 {
+    text-align: center;
+}
+
+
+@media all and (max-width: 1100px) {
+    #instructionsModal{
+        visibility: hidden;
+    }
+
+    #not-support {
+        visibility: visible;
+        background-color: rgba(175, 175, 170, 0.51);
+    }
+}
+
+@media all and (min-width: 1100px){
+    #not-support{
+        visibility: hidden;
+    }
+
+}
