--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,8 @@ body {
     #not-support {
         visibility: visible;
         background-color: rgba(175, 175, 170, 0.51);
+        color: white;
+        background-image: linear-gradient(rgb(128, 2, 2), rgba(10, 2, 2, 0.98));
     }
 }
 
